# Wanli-Tools

./: .gitignore  Cheatsheet - helpers.md  Cheatsheet - perforce.md  Cheatsheet - setups.md  Cheatsheet.md  Cheatsheet.txt  NvConfig.sh  NvDisplay.sh  NvInstall.sh  NvTest-Viewperf.sh  WZhu
GPUPerfTests/: GPUPerfTests.sln
GPUPerfTests/MSAAResolve-DX12/: MSAAResolve-DX12.vcxproj  PixelShader.hlsl  README.md  VertexShader.hlsl  d3dx12.h  main.cpp
GPUPerfTests/MSAAResolve-GLVK/: MSAAResolve-GLVK.vcxproj  MSAAResolve-GLVK.vcxproj.filters  MSAAResolve_GL.cpp  MSAAResolve_GLVK.h  MSAAResolve_VK.cpp  Makefile  README.md  fragment-shader.glsl  glad.c  glad.h  main.cpp  vertex-shader.glsl
GPUPerfTests/MSAAResolve_DX12/: main.cpp
GPUPerfTests/MSAAResolve_GLVK/: MSAAResolve_GLVK.vcxproj
NVPerfTests/: CMakeLists.txt
NvPerfTests/: .clangd  CMakeLists.txt  NvTests.sln
NvPerfTests/MSAAResolve/: CMakeLists.txt  MSAAResolve_GL.cpp  MSAAResolve_GLVK.h  MSAAResolve_VK.cpp  main.cpp
Scripts/: Add-Keys.sh  Cheatsheet - perforce.md  Cheatsheet.md  Connect-via-SSH.sh  Connect.sh  Define-Functions.sh  Install-Nvidia-Driver.sh  Keyring.sh  Micro-Functions.sh  Mount-Disk-in-WSL2.sh  Mount-EXT4-into-WSL2.ps1  Mount-Ext4-in-WSL2.ps1  NVMake.sh  NVTest.sh  NvMake.sh  NvTest.sh  Perforce Client Mappings.txt  Prune-Build-Dirs.sh  Setup-Env-PATH.sh  Setup-Env-for-NvMake.sh  Setup-Env-for-Perforce.sh  Setup-Env.sh  Setup-NoPasswd.sh  Start-SSH-Session.sh  Visualize-Viewperf-Results.py  Xorg.sh
__old__/NVPerfTests/Window_GLVK/: CMakeLists.txt
__old__/NVPerfTests/Window_GLVK/glad/: glad.c
(+44 files in other folders)
